didnt know this

--- a/system/etc/sysctl/99-sysctl.conf
+++ b/system/etc/sysctl/99-sysctl.conf
@@ -69,9 +69,9 @@ vm.mmap_rnd_bits = 32
 vm.mmap_rnd_compat_bits = 16
 
 # BORE Related, might not be compatible with most kernels though. uncomment if it's supported
-#kernel.sched_bore = 1
-#kernel.sched_burst_fork_atavistic = 3
-#kernel.sched_burst_smoothness_long = 1
-#kernel.sched_burst_smoothness_short = 1
-#kernel.sched_burst_exclude_kthreads = 0
+-kernel.sched_bore = 1
+-kernel.sched_burst_fork_atavistic = 3
+-kernel.sched_burst_smoothness_long = 1
+-kernel.sched_burst_smoothness_short = 1
+-kernel.sched_burst_exclude_kthreads = 0
 kernel.sched_rt_runtime_us = -1
