--- a/system/etc/sysctl/99-sysctl.conf
+++ b/system/etc/sysctl/99-sysctl.conf
@@ -1,13 +1,15 @@
 vm.dirty_ratio = 10
-vm.dirty_background_ratio = 5
+vm.dirty_background_ratio = 10
 vm.vfs_cache_pressure = 25
 net.core.default_qdisc = cake
 net.ipv4.tcp_congestion_control = bbr
-vm.page-cluster = 1
+vm.page-cluster = 0
+vm.watermark_boost_factor = 0
+vm.watermark_scale_factor = 125
 vm.swappiness = 200
 vm.max_map_count = 2147483642
-vm.workingset_protection = 1
 vm.hugetlb_optimize_vmemmap = 1
+vm.nr_hugepages=1024
 net.core.netdev_max_backlog = 32768
 net.core.somaxconn = 16384
 net.core.rmem_default = 1048576
@@ -39,7 +41,6 @@ kernel.kexec_load_disabled = 1
 kernel.kptr_restrict = 2
 kernel.printk = 3 3 3 3
 kernel.sysrq = 0
-kernel.yama.ptrace_scope = 3
 net.core.bpf_jit_harden = 2
 net.ipv4.conf.all.accept_redirects = 0
 net.ipv4.conf.all.accept_source_route = 0
@@ -68,10 +69,13 @@ net.ipv6.conf.default.accept_source_route = 0
 vm.mmap_rnd_bits = 32
 vm.mmap_rnd_compat_bits = 16
 
-# BORE Related, might not be compatible with most kernels though. uncomment if it's supported
+# BORE Related, might not be compatible with most kernels though therefore prefixed with -
 -kernel.sched_bore = 1
 -kernel.sched_burst_fork_atavistic = 3
 -kernel.sched_burst_smoothness_long = 1
 -kernel.sched_burst_smoothness_short = 1
 -kernel.sched_burst_exclude_kthreads = 0
+
+# CachyOS patch
+-vm.workingset_protection = 1
 kernel.sched_rt_runtime_us = -1
