--- a/user/kitty/kitty.conf
+++ b/user/kitty/kitty.conf
@@ -2714,6 +2714,6 @@ linux_display_server wayland
 
 
 # BEGIN_KITTY_THEME
-# Tokyo Night
+# Bright Lights
 include current-theme.conf
 # END_KITTY_THEME
