--- a/user/kitty/current-theme.conf
+++ b/user/kitty/current-theme.conf
@@ -1,50 +1,21 @@
-# vim:ft=kitty
-
-## name: Tokyo Night
-## license: MIT
-## author: Folke Lemaitre
-## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty/tokyonight_night.conf
-
-
-background #1a1b26
-foreground #c0caf5
-selection_background #283457
-selection_foreground #c0caf5
-url_color #73daca
-cursor #c0caf5
-cursor_text_color #1a1b26
-
-# Tabs
-active_tab_background #7aa2f7
-active_tab_foreground #16161e
-inactive_tab_background #292e42
-inactive_tab_foreground #545c7e
-#tab_bar_background #15161e
-
-# Windows
-active_border_color #7aa2f7
-inactive_border_color #292e42
-
-# normal
-color0 #15161e
-color1 #f7768e
-color2 #9ece6a
-color3 #e0af68
-color4 #7aa2f7
-color5 #bb9af7
-color6 #7dcfff
-color7 #a9b1d6
-
-# bright
-color8 #414868
-color9 #f7768e
-color10 #9ece6a
-color11 #e0af68
-color12 #7aa2f7
-color13 #bb9af7
-color14 #7dcfff
-color15 #c0caf5
-
-# extended colors
-color16 #ff9e64
-color17 #db4b4b
+background            #191919
+foreground            #b2c8d6
+cursor                #f34a00
+selection_background  #b2c8d6
+color0                #191919
+color8                #191919
+color1                #ff355b
+color9                #ff355b
+color2                #b6e875
+color10               #b6e875
+color3                #ffc150
+color11               #ffc150
+color4                #75d3ff
+color12               #75d4ff
+color5                #b975e6
+color13               #b975e6
+color6                #6cbeb5
+color14               #6cbeb5
+color7                #c1c8d6
+color15               #c1c8d6
+selection_foreground #191919
