--- a/system/etc/tlp/tlp.conf
+++ b/system/etc/tlp/tlp.conf
@@ -261,7 +261,7 @@ DISK_APM_LEVEL_ON_BAT="255 255"
 #   the old block layer in kernel 5.0
 # Default: keep
 
-DISK_IOSCHED="kyber kyber"
+DISK_IOSCHED="adios"
 
 # AHCI link power management (ALPM) for SATA disks:
 #   min_power, med_power_with_dipm(*), medium_power, max_performance.
