Update pipewire config, add rtirq

--- a/system/etc/pipewire/pipewire-pulse.conf
+++ b/system/etc/pipewire/pipewire-pulse.conf
@@ -1,4 +1,4 @@
-# PulseAudio config file for PipeWire version "1.2.7" #
+# PulseAudio config file for PipeWire version "1.4.2" #
 #
 # Copy and edit this file in /etc/pipewire for system-wide changes
 # or in ~/.config/pipewire for local changes.
@@ -26,12 +26,12 @@ context.spa-libs = {
 context.modules = [
     { name = libpipewire-module-rt
         args = {
-            nice.level   = -11
-            rt.prio      = 80
+            nice.level   = -19
+            rt.prio      = 99
             rt.time.soft = -1
             rt.time.hard = -1
             uclamp.min = 0
-            uclamp.max = 512
+            uclamp.max = 1024
         }
         flags = [ ifexists nofail ]
     }
@@ -51,7 +51,7 @@ context.modules = [
 # Extra scripts can be started here. Setup in default.pa can be moved in
 # a script or in pulse.cmd below
 context.exec = [
-    { path = "pactl"         args = "load-module module-always-sink" }
+    #{ path = "pactl"        args = "load-module module-always-sink" }
     #{ path = "pactl"        args = "upload-sample my-sample.wav my-sample" }
     #{ path = "/usr/bin/sh"  args = "~/.config/pipewire/default.pw" }
 ]
@@ -60,23 +60,29 @@ context.exec = [
 #   load-module : loads a module with args and flags
 #      args = "<module-name> <module-args>"
 #      ( flags = [ nofail ] )
+#      ( condition = [ { <key1> = <value1>, ... } ... ] )
+# conditions will check the pulse.properties key/values.
 pulse.cmd = [
-    { cmd = "load-module" args = "module-always-sink" flags = [ ] }
-    { cmd = "load-module" args = "module-device-manager" flags = [ ] }
-    { cmd = "load-module" args = "module-device-restore" flags = [ ] }
-    { cmd = "load-module" args = "module-stream-restore" flags = [ ] }
+    { cmd = "load-module" args = "module-always-sink" flags = [ ]
+        condition = [ { pulse.cmd.always-sink = !false } ] }
+    { cmd = "load-module" args = "module-device-manager" flags = [ ]
+        condition = [ { pulse.cmd.device-manager = !false } ] }
+    { cmd = "load-module" args = "module-device-restore" flags = [ ]
+        condition = [ { pulse.cmd.device-restore = !false } ] }
+    { cmd = "load-module" args = "module-stream-restore" flags = [ ]
+        condition = [ { pulse.cmd.stream-restore = !false } ] }
     { cmd = "load-module" args = "module-switch-on-connect" }
     { cmd = "load-module" args = "module-gsettings" flags = [ nofail ] }
 ]
 
 stream.properties = {
-    node.latency           = 512/48000
+    node.latency           = 2048/192000
     node.autoconnect       = true
-    resample.quality       = 14
-    channelmix.normalize   = true
-    #channelmix.mix-lfe    = true
-    #channelmix.upmix      = true
-    #channelmix.upmix-method = psd  # none, simple
+    resample.quality       = 4
+    channelmix.normalize   = false
+    channelmix.mix-lfe     = true
+    channelmix.upmix       = true
+    channelmix.upmix-method = psd  # none, simple
     #channelmix.lfe-cutoff = 150
     #channelmix.fc-cutoff  = 12000
     #channelmix.rear-delay = 12.0
@@ -100,17 +106,17 @@ pulse.properties = {
         #  client.access = "restricted"     # permissions for clients
         #}
     ]
-    server.dbus-name        = "org.pulseaudio.Server"
+    server.dbus-name       = "org.pulseaudio.Server"
     pulse.allow-module-loading = true
     #pulse.min.req          = 128/48000     # 2.7ms
-    #pulse.default.req      = 960/48000     # 20 milliseconds
+    pulse.default.req       = 1024/19200    # 20 milliseconds
     #pulse.min.frag         = 128/48000     # 2.7ms
     #pulse.default.frag     = 96000/48000   # 2 seconds
     #pulse.default.tlength  = 96000/48000   # 2 seconds
     #pulse.min.quantum      = 128/48000     # 2.7ms
     #pulse.idle.timeout     = 0             # don't pause after underruns
-    pulse.default.format    = F32
-    #pulse.default.position = [ FL FR ]
+    pulse.default.format   = F32
+    pulse.default.position = [ FL FR ]
 }
 
 pulse.properties.rules = [
@@ -118,7 +124,7 @@ pulse.properties.rules = [
         actions = {
             update-props = {
             # These overrides are only applied when running in a vm.
-                pulse.min.quantum = 512/48000      # 22ms
+                pulse.min.quantum = 1024/48000      # 22ms
 	    }
         }
     }
@@ -130,14 +136,14 @@ pulse.rules = [
         matches = [
             {
                 # all keys must match the value. ! negates. ~ starts regex.
-                client.name                 = "Firefox"
+                #client.name                = "Firefox"
                 #application.process.binary = "teams"
                 #application.name           = "~speech-dispatcher.*"
             }
         ]
         actions = {
             update-props = {
-                node.latency = 512/48000
+                #node.latency = 512/48000
             }
             # Possible quirks:"
             #    force-s16-info                 forces sink and source info as S16 format
@@ -152,6 +158,7 @@ pulse.rules = [
         matches = [
              { application.process.binary = "teams" }
              { application.process.binary = "teams-insiders" }
+             { application.process.binary = "teams-for-linux" }
              { application.process.binary = "skypeforlinux" }
         ]
         actions = { quirks = [ force-s16-info ] }
