--- a/system/etc/iwd/main.conf
+++ b/system/etc/iwd/main.conf
@@ -1,3 +1,8 @@
 [General]
+EnableNetworkConfiguration=true
 AddressRandomization=once
 AddressRandomizationRange=full
+Country=UY
+[Network]
+RoutePriorityOffset=200
+NameResolvingService=systemd
