--- a/user/fuzzel/fuzzel.ini
+++ b/user/fuzzel/fuzzel.ini
@@ -43,22 +43,32 @@ match-counter=yes
 # render-workers=<number of logical CPUs>
 # match-workers=<number of logical CPUs>
 
+# Vesper theme for Fuzzel
+# Based on the Vesper Neovim theme by datsfilipe
+
 [colors]
-background=161620ff
-# text=657b83ff
-# prompt=586e75ff
-# placeholder=93a1a1ff
-# input=657b83ff
-# match=cb4b16ff
-# selection=eee8d5ff
-# selection-text=586e75ff
-# selection-match=cb4b16ff
-# counter=93a1a1ff
-border=002b36ff
+# Background and foreground
+background=101010ff
+text=CCCCCCff
+prompt=FEFEFEff
+placeholder=65737Eff
+input=FEFEFEff
+
+# Selection colors
+selection=282828ff
+selection-text=FEFEFEff
+selection-match=99FFE4ff
+
+# Match highlighting
+match=99FFE4ff
+selection-match=99FFE4ff
+
+# Border
+border=505050ff
 
 [border]
-width=0
-radius=0
+width=2
+radius=8
 
 [dmenu]
 # mode=text  # text|index
