--- a/user/kitty/current-theme.conf
+++ b/user/kitty/current-theme.conf
@@ -1,21 +1,70 @@
-background            #191919
-foreground            #b2c8d6
-cursor                #f34a00
-selection_background  #b2c8d6
-color0                #191919
-color8                #191919
-color1                #ff355b
-color9                #ff355b
-color2                #b6e875
-color10               #b6e875
-color3                #ffc150
-color11               #ffc150
-color4                #75d3ff
-color12               #75d4ff
-color5                #b975e6
-color13               #b975e6
-color6                #6cbeb5
-color14               #6cbeb5
-color7                #c1c8d6
-color15               #c1c8d6
-selection_foreground #191919
+# vim:ft=kitty
+
+# Vesper theme for Kitty
+# Based on the Vesper Neovim theme by datsfilipe
+
+# Basic colors
+foreground              #CCCCCC
+background              #101010
+selection_foreground    #FEFEFE
+selection_background    #343434
+
+# Cursor colors
+cursor                  #FEFEFE
+cursor_text_color       #101010
+
+# URL colors
+url_color               #99FFE4
+
+# Window border colors
+active_border_color     #65737E
+inactive_border_color   #505050
+bell_border_color       #FF8080
+
+# Tab bar colors
+active_tab_foreground   #FEFEFE
+active_tab_background   #282828
+inactive_tab_foreground #65737E
+inactive_tab_background #161616
+tab_bar_background      #101010
+
+# The 16 terminal colors (ANSI)
+# black
+color0   #101010
+color8   #505050
+
+# red  
+color1   #FF8080
+color9   #FF8080
+
+# green
+color2   #7DD9C1
+color10  #7DD9C1
+
+# yellow
+color3   #FFC799
+color11  #FFC799
+
+# blue
+color4   #65737E
+color12  #A0A0A0
+
+# magenta
+color5   #FFCFA8
+color13  #FFCFA8
+
+# cyan
+color6   #99FFE4
+color14  #99FFE4
+
+# white
+color7   #CCCCCC
+color15  #FFFFFF
+
+# Mark colors for search highlighting
+mark1_foreground        #101010
+mark1_background        #99FFE4
+mark2_foreground        #101010
+mark2_background        #FFC799
+mark3_foreground        #101010
+mark3_background        #FF8080
