--- a/user/hypr/hyprland.conf
+++ b/user/hypr/hyprland.conf
@@ -27,6 +27,7 @@ $menu = fuzzel
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+exec-once = clipse -listen
 
 
 #############################
@@ -237,7 +238,7 @@ bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, V, exec, kitty --class clipse -e clipse
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
@@ -315,3 +316,7 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = float, class:(clipse)
+windowrule = size 622 652, class:(clipse)
+windowrule = stayfocused, class:(clipse)
+
