--- a/user/hypr/hyprland.conf
+++ b/user/hypr/hyprland.conf
@@ -90,7 +90,7 @@ general {
     border_size = 1
     col.active_border = $borderFocus
     col.inactive_border = $border
-    resize_on_border = true
+    resize_on_border = false
     allow_tearing = false
     layout = dwindle
 }
