--- a/user/hypr/hyprland.conf
+++ b/user/hypr/hyprland.conf
@@ -299,6 +299,7 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+bind = $mainMod, Print, exec, grim -t png -l 0 -g "$(slurp -d)" - | wl-copy
 bind = , Print, exec, grim -t png -l 0 -g "$(slurp -d)" - | wl-copy
 
 ##############################
