--- a/user/kitty/current-theme.conf
+++ b/user/kitty/current-theme.conf
@@ -1,70 +1,40 @@
 # vim:ft=kitty
 
-# Vesper theme for Kitty
-# Based on the Vesper Neovim theme by datsfilipe
+background #090E13
+foreground #C5C9C7
+selection_background #393B44
+selection_foreground #C5C9C7
+url_color #72A7BC
+cursor #C5C9C7
+cursor_text_color #090E13
 
-# Basic colors
-foreground              #CCCCCC
-background              #101010
-selection_foreground    #FEFEFE
-selection_background    #343434
+# Tabs
+active_tab_background #090E13
+active_tab_foreground #C5C9C7
+inactive_tab_background  #090E13
+inactive_tab_foreground #A4A7A4
 
-# Cursor colors
-cursor                  #FEFEFE
-cursor_text_color       #101010
+# normal
+color0 #0d0c0c
+color1 #c4746e
+color2 #8a9a7b
+color3 #c4b28a
+color4 #8ba4b0
+color5 #a292a3
+color6 #8ea4a2
+color7 #C8C093
 
-# URL colors
-url_color               #99FFE4
+# bright
+color8  #A4A7A4
+color9  #E46876
+color10 #87a987
+color11 #E6C384
+color12 #7FB4CA
+color13 #938AA9
+color14 #7AA89F
+color15 #C5C9C7
 
-# Window border colors
-active_border_color     #65737E
-inactive_border_color   #505050
-bell_border_color       #FF8080
 
-# Tab bar colors
-active_tab_foreground   #FEFEFE
-active_tab_background   #282828
-inactive_tab_foreground #65737E
-inactive_tab_background #161616
-tab_bar_background      #101010
-
-# The 16 terminal colors (ANSI)
-# black
-color0   #101010
-color8   #505050
-
-# red  
-color1   #FF8080
-color9   #FF8080
-
-# green
-color2   #7DD9C1
-color10  #7DD9C1
-
-# yellow
-color3   #FFC799
-color11  #FFC799
-
-# blue
-color4   #65737E
-color12  #A0A0A0
-
-# magenta
-color5   #FFCFA8
-color13  #FFCFA8
-
-# cyan
-color6   #99FFE4
-color14  #99FFE4
-
-# white
-color7   #CCCCCC
-color15  #FFFFFF
-
-# Mark colors for search highlighting
-mark1_foreground        #101010
-mark1_background        #99FFE4
-mark2_foreground        #101010
-mark2_background        #FFC799
-mark3_foreground        #101010
-mark3_background        #FF8080
+# extended colors
+color16 #b6927b
+color17 #b98d7b
