--- a/system/etc/sysctl/99-sysctl.conf
+++ b/system/etc/sysctl/99-sysctl.conf
@@ -56,13 +56,24 @@ net.ipv4.tcp_rfc1337 = 1
 net.ipv4.tcp_sack = 1
 net.ipv4.tcp_syncookies = 1
 net.ipv4.tcp_timestamps = 1
-net.ipv6.conf.all.accept_ra = 0
-net.ipv6.conf.all.accept_redirects = 0
-net.ipv6.conf.all.accept_source_route = 0
+net.ipv6.conf.all.accept_ra = 1
+net.ipv6.conf.all.accept_redirects = 1
+net.ipv6.conf.all.accept_source_route = 1
+net.ipv6.conf.all.accept_ra_from_local = 1
+net.ipv6.conf.all.accept_ra_rtr_pref = 1
 net.ipv6.conf.all.use_tempaddr = 2
-net.ipv6.conf.default.accept_ra = 0
-net.ipv6.conf.default.accept_redirects = 0
-net.ipv6.conf.default.accept_source_route = 0
+net.ipv6.conf.all.accept_ra_pinfo = 1
+net.ipv6.conf.all.auto_flowlabels = 3
+net.ipv6.conf.all.temp_valid_lft = 28800
+net.ipv6.conf.default.accept_ra = 1
+net.ipv6.conf.default.accept_redirects = 1
+net.ipv6.conf.default.accept_source_route = 1
+net.ipv6.conf.default.accept_ra_from_local = 1
+net.ipv6.conf.default.accept_ra_pinfo = 1
+net.ipv6.conf.default.accept_ra_rtr_pref = 1
+net.ipv6.conf.default.use_tempaddr = 2
+net.ipv6.conf.default.auto_flowlabels = 3
+net.ipv6.conf.default.temp_valid_lft = 28800
 vm.mmap_rnd_bits = 32
 vm.mmap_rnd_compat_bits = 16
 
