BPF JIT maxxing

--- a/system/etc/sysctl/99-sysctl.conf
+++ b/system/etc/sysctl/99-sysctl.conf
@@ -39,17 +39,18 @@ kernel.kexec_load_disabled = 1
 kernel.kptr_restrict = 2
 kernel.printk = 3 3 3 3
 kernel.sysrq = 0
+net.core.bpf_jit_enable = 1
 net.core.bpf_jit_harden = 2
-net.ipv4.conf.all.accept_redirects = 0
-net.ipv4.conf.all.accept_source_route = 0
+net.ipv4.conf.all.accept_redirects = 1
+net.ipv4.conf.all.accept_source_route = 1
 net.ipv4.conf.all.rp_filter = 1
-net.ipv4.conf.all.secure_redirects = 0
-net.ipv4.conf.all.send_redirects = 0
-net.ipv4.conf.default.accept_redirects = 0
-net.ipv4.conf.default.accept_source_route = 0
+net.ipv4.conf.all.secure_redirects = 1
+net.ipv4.conf.all.send_redirects = 1
+net.ipv4.conf.default.accept_redirects = 1
+net.ipv4.conf.default.accept_source_route = 1
 net.ipv4.conf.default.rp_filter = 1
-net.ipv4.conf.default.secure_redirects = 0
-net.ipv4.conf.default.send_redirects = 0
+net.ipv4.conf.default.secure_redirects = 1
+net.ipv4.conf.default.send_redirects = 1
 net.ipv4.tcp_dsack = 1
 net.ipv4.tcp_fack = 1
 net.ipv4.tcp_rfc1337 = 1
