--- a/user/hypr/hyprland.conf
+++ b/user/hypr/hyprland.conf
@@ -3,8 +3,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,highres,auto,1
 
+monitor=,highres,auto,1
 
 ###################
 ### MY PROGRAMS ###
@@ -13,8 +13,8 @@ monitor=,highres,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
-$menu = fuzzel
+$terminal = uwsm app -- kitty
+$menu = uwsm app -- fuzzel
 
 
 #################
@@ -28,6 +28,7 @@ $menu = fuzzel
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 exec-once = clipse -listen
+exec-once = easyeffects --gapplication-service
 
 
 #############################
@@ -48,9 +49,10 @@ env = HYPRCURSOR_SIZE,24
 # Please note permission changes here require a Hyprland restart and are not applied on-the-fly
 # for security reasons
 
-# ecosystem {
-#   enforce_permissions = 1
-# }
+ecosystem {
+	no_update_news = true
+	no_donation_nag = true
+}
 
 # permission = /usr/(bin|local/bin)/grim, screencopy, allow
 # permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
@@ -85,9 +87,9 @@ $info = rgb(99FFE4)
 
 # Window styling
 general {
-    gaps_in = 4
-    gaps_out = 8
-    border_size = 1
+    gaps_in = 10
+    gaps_out = 10
+    border_size = 2
     col.active_border = $borderFocus
     col.inactive_border = $border
     resize_on_border = false
@@ -100,17 +102,25 @@ decoration {
     rounding = 8
     active_opacity = 1.0
     inactive_opacity = 0.95
+    dim_inactive = true
     
     blur {
         enabled = true
-        size = 6
-        passes = 2
+        size = 8
+        passes = 8
         brightness = 1.0
         contrast = 1.0
-        noise = 0.01
-        vibrancy = 0.1
-        vibrancy_darkness = 0.0
+        noise = 0.1
+        vibrancy = 1
+        vibrancy_darkness = 1
+	special = true
+	popups = true
     }
+	shadow {
+		enabled = true
+		render_power = 4
+		sharp = true
+	}
 }
 
 # Animations
@@ -171,12 +181,16 @@ misc {
     animate_mouse_windowdragging = false
     vfr = true
     vrr = 1
+    render_unfocused_fps = 60
+    mouse_move_enables_dpms = true
+    key_press_enables_dpms = true
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
+    smart_split = true
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
@@ -190,8 +204,10 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
+	# kb_layout = us
     follow_mouse = 1
+	repeat_rate = 60
+	repeat_delay = 500
     sensitivity = 0
     accel_profile = flat
     
@@ -215,7 +231,7 @@ gestures {
     workspace_swipe_create_new = true
     workspace_swipe_direction_lock = true
     workspace_swipe_direction_lock_threshold = 10
-    workspace_swipe_forever = false
+    workspace_swipe_forever = true
 }
 
 # Example per-device config
@@ -238,7 +254,7 @@ bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, exec, kitty --class clipse -e clipse
+bind = $mainMod, V, exec, uwsm app -- kitty --class clipse -e clipse
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
@@ -299,8 +315,8 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-bind = $mainMod, Print, exec, grim -t png -l 0 -g "$(slurp -d)" - | wl-copy
-bind = , Print, exec, grim -t png -l 0 - | wl-copy
+bindl = $mainMod, print, exec, hyprshot -z --clipboard-only -m window
+bindl = , print, exec, hyprshot -z --clipboard-only -m output 
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -321,3 +337,16 @@ windowrule = float, class:(clipse)
 windowrule = size 622 652, class:(clipse)
 windowrule = stayfocused, class:(clipse)
 
+xwayland {
+	force_zero_scaling = true
+	create_abstract_socket = true
+}
+
+render {
+	direct_scanout = 1
+	new_render_scheduling = true
+}
+
+experimental {
+	xx_color_management_v4 = true
+}
