--- a/user/hypr/hyprland.conf
+++ b/user/hypr/hyprland.conf
@@ -14,7 +14,7 @@ monitor=,highres,auto,1
 
 # Set programs that you use
 $terminal = uwsm app -- kitty
-$menu = uwsm app -- fuzzel
+$menu = uwsm app -- fuzzel --launch-prefix='app2unit --fuzzel-compat --'
 
 
 #################
@@ -27,8 +27,8 @@ $menu = uwsm app -- fuzzel
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = clipse -listen
-exec-once = easyeffects --gapplication-service
+exec-once = uwsm app -- clipse -listen
+exec-once = uwsm app -- easyeffects --gapplication-service
 
 
 #############################
