--- a/user/hypr/hyprland.conf
+++ b/user/hypr/hyprland.conf
@@ -315,8 +315,8 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-bindl = $mainMod, print, exec, hyprshot -z --clipboard-only -m window
-bindl = , print, exec, hyprshot -z --clipboard-only -m output 
+bindl = $mainMod, Print, exec, grim -t png -l 0 -g "$(slurp -d)" - | wl-copy -t image/png
+bindl = , Print, exec, grim -t png -l 0 - | wl-copy -t image/png
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
