--- a/user/kitty/current-theme.conf
+++ b/user/kitty/current-theme.conf
@@ -1,40 +1,51 @@
 # vim:ft=kitty
 
-background #090E13
-foreground #C5C9C7
-selection_background #393B44
-selection_foreground #C5C9C7
-url_color #72A7BC
-cursor #C5C9C7
-cursor_text_color #090E13
+## name: Tokyo Night
+## license: MIT
+## author: Folke Lemaitre
+## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty/tokyonight_night.conf
+
+
+background #1a1b26
+foreground #c0caf5
+selection_background #283457
+selection_foreground #c0caf5
+url_color #73daca
+cursor #c0caf5
+cursor_text_color #1a1b26
 
 # Tabs
-active_tab_background #090E13
-active_tab_foreground #C5C9C7
-inactive_tab_background  #090E13
-inactive_tab_foreground #A4A7A4
+active_tab_background #7aa2f7
+active_tab_foreground #16161e
+inactive_tab_background #292e42
+inactive_tab_foreground #545c7e
+#tab_bar_background #15161e
+
+# Windows
+active_border_color #7aa2f7
+inactive_border_color #292e42
 
 # normal
-color0 #0d0c0c
-color1 #c4746e
-color2 #8a9a7b
-color3 #c4b28a
-color4 #8ba4b0
-color5 #a292a3
-color6 #8ea4a2
-color7 #C8C093
+color0 #15161e
+color1 #f7768e
+color2 #9ece6a
+color3 #e0af68
+color4 #7aa2f7
+color5 #bb9af7
+color6 #7dcfff
+color7 #a9b1d6
 
 # bright
-color8  #A4A7A4
-color9  #E46876
-color10 #87a987
-color11 #E6C384
-color12 #7FB4CA
-color13 #938AA9
-color14 #7AA89F
-color15 #C5C9C7
-
+color8  #414868
+color9  #ff899d
+color10 #9fe044
+color11 #faba4a
+color12 #8db0ff
+color13 #c7a9ff
+color14 #a4daff
+color15 #c0caf5
 
 # extended colors
-color16 #b6927b
-color17 #b98d7b
+color16 #ff9e64
+color17 #db4b4b
+
