--- a/system/etc/systemd/pstore.conf
+++ b/system/etc/systemd/pstore.conf
@@ -8,22 +8,14 @@
 # Entries in this file show the compile time defaults. Local configuration
 # should be created by either modifying this file (or a copy of it placed in
 # /etc/ if the original file is shipped in /usr/), or by creating "drop-ins" in
-# the /etc/systemd/resolved.conf.d/ directory. The latter is generally
+# the /etc/systemd/pstore.conf.d/ directory. The latter is generally
 # recommended. Defaults can be restored by simply deleting the main
 # configuration file and all drop-ins located in /etc/.
 #
-# Use 'systemd-analyze cat-config systemd/resolved.conf' to display the full config.
+# Use 'systemd-analyze cat-config systemd/pstore.conf' to display the full config.
 #
-# See resolved.conf(5) for details.
+# See pstore.conf(5) for details.
 
-[Resolve]
-DNS=1.1.1.1#cloudflare-dns.com 1.0.0.1#cloudflare-dns.com 2606:4700:4700::1111#cloudflare-dns.com 2606:4700:4700::1001#cloudflare-dns.com
-FallbackDNS=1.1.1.1#cloudflare-dns.com 1.0.0.1#cloudflare-dns.com 2606:4700:4700::1111#cloudflare-dns.com 2606:4700:4700::1001#cloudflare-dns.com
-Domains=~.
-DNSSEC=yes
-DNSOverTLS=yes
-MulticastDNS=no
-LLMNR=yes
-Cache=yes
-DNSStubListener=yes
-ReadEtcHosts=yes
+[PStore]
+Storage=journal
+Unlink=yes
