--- a/system/etc/pipewire/client.conf
+++ b/system/etc/pipewire/client.conf
@@ -44,7 +44,7 @@ context.modules = [
     # Uses realtime scheduling to boost the audio thread priorities
     { name = libpipewire-module-rt
         args = {
-            rt.prio      = 99
+            rt.prio      = 96
             rt.time.soft = -1
             rt.time.hard = -1
         }
@@ -91,12 +91,12 @@ filter.properties = {
 }
 
 stream.properties = {
-    node.latency           = 1024/192000
-    node.autoconnect       = true
-    resample.quality       = 4
-    channelmix.normalize   = true
-    channelmix.mix-lfe     = true
-    channelmix.upmix       = true
+    node.latency            = 2048/192000
+    node.autoconnect        = true
+    resample.quality        = 14
+    channelmix.normalize    = true
+    channelmix.mix-lfe      = true
+    channelmix.upmix        = true
     channelmix.upmix-method = psd  # none, simple
     #channelmix.lfe-cutoff = 150
     #channelmix.fc-cutoff  = 12000
@@ -127,8 +127,8 @@ alsa.properties = {
     # ALSA params take a single value, an array [] of values
     # or a range { min=.. max=... }
     alsa.access = [ MMAP_INTERLEAVED MMAP_NONINTERLEAVED RW_INTERLEAVED RW_NONINTERLEAVED ]
-    alsa.format = [ FLOAT S32 S24 S24_3 S16 U8 ]
-    alsa.rate = { min=1 max=384000 }		# or [ 44100 48000 .. ]
+    alsa.format = [ FLOAT ]
+    alsa.rate = { min=1 max=192000 }		# or [ 44100 48000 .. ]
     alsa.channels = { min=1 max=64 }		# or [ 2 4 6 .. ]
     alsa.period-bytes = { min=128 max=2097152 } # or [ 128 256 1024 .. ]
     alsa.buffer-bytes = { min=256 max=4194304 } # or [ 256 512 4096 .. ]
