--- a/system/etc/pipewire/pipewire.conf
+++ b/system/etc/pipewire/pipewire.conf
@@ -21,7 +21,7 @@ context.properties = {
 
     loop.rt-prio = -1            # -1 = use module-rt prio, 0 disable rt
     loop.class = data.rt
-    context.num-data-loops = 1   # -1 = num-cpus, 0 = no data loops
+    context.num-data-loops = -1   # -1 = num-cpus, 0 = no data loops
     #
     context.data-loops = [
         {   loop.rt-prio = -1
@@ -106,7 +106,7 @@ context.modules = [
     { name = libpipewire-module-rt
         args = {
             nice.level    = -19
-            rt.prio       = 99
+            rt.prio       = 96
             rt.time.soft = -1
             rt.time.hard = -1
             uclamp.min  = 0
@@ -339,28 +339,4 @@ context.objects = [
     #}
 ]
 
-context.exec = [
-    #{   path = <program-name>
-    #    ( args = "<arguments>" | [ <arg1> <arg2> ... ] )
-    #    ( condition = [ { <key> = <value> ... } ... ] )
-    #}
-    #
-    # Execute the given program with arguments.
-    # If condition is given, the program is executed only when the context
-    # properties all match the match rules.
-    #
-    # You can optionally start the session manager here,
-    # but it is better to start it as a systemd service.
-    # Run the session manager with -h for options.
-    #
-    #{ path = "/usr/bin/pipewire-media-session" args = ""
-    #  condition = [ { exec.session-manager = !false } ] }
-    #
-    # You can optionally start the pulseaudio-server here as well
-    # but it is better to start it as a systemd service.
-    # It can be interesting to start another daemon here that listens
-    # on another address with the -a option (eg. -a tcp:4713).
-    #
-    { path = "/usr/bin/pipewire" args = [ "-c" "pipewire-pulse.conf" ]
-	condition = [ { exec.pipewire-pulse = !false } ] }
-]
+context.exec = [ ]
