--- a/system/etc/sysctl/99-sysctl.conf
+++ b/system/etc/sysctl/99-sysctl.conf
@@ -7,7 +7,7 @@ vm.page-cluster = 4
 vm.watermark_boost_factor = 0
 vm.watermark_scale_factor = 125
 vm.swappiness = 200
-vm.max_map_count = 2147483642
+vm.max_map_count = 2147483647
 net.core.netdev_max_backlog = 32768
 net.core.somaxconn = 16384
 net.core.rmem_default = 1048576
@@ -51,12 +51,12 @@ vm.mmap_rnd_bits = 32
 vm.mmap_rnd_compat_bits = 16
 
 # BORE Related, might not be compatible with most kernels though therefore prefixed with -
--kernel.sched_bore = 1
--kernel.sched_burst_fork_atavistic = 3
--kernel.sched_burst_smoothness_long = 1
--kernel.sched_burst_smoothness_short = 1
--kernel.sched_burst_exclude_kthreads = 0
+kernel.sched_bore = 1
+kernel.sched_burst_fork_atavistic = 3
+kernel.sched_burst_smoothness_long = 1
+kernel.sched_burst_smoothness_short = 1
+kernel.sched_burst_exclude_kthreads = 0
 
 # CachyOS patch
--vm.workingset_protection = 1
+vm.workingset_protection = 1
 kernel.sched_rt_runtime_us = -1
