--- a/system/etc/systemd/coredump.conf
+++ b/system/etc/systemd/coredump.conf
@@ -20,9 +20,9 @@
 Storage=journal
 Compress=yes
 # On 32-bit, the default is 1G instead of 32G.
-#ProcessSizeMax=32G
-#ExternalSizeMax=32G
-#JournalSizeMax=767M
+ProcessSizeMax=32G
+ExternalSizeMax=32G
+JournalSizeMax=1024M
 #MaxUse=
 #KeepFree=
 EnterNamespace=yes
