--- a/system/etc/systemd/logind.conf
+++ b/system/etc/systemd/logind.conf
@@ -48,7 +48,8 @@ KillUserProcesses=yes
 RuntimeDirectorySize=100%
 #RuntimeDirectoryInodesMax=
 RemoveIPC=yes
-#InhibitorsMax=8192
-#SessionsMax=8192
+InhibitorsMax=16384
+SessionsMax=16384
 #StopIdleSessionSec=infinity
 #DesignatedMaintenanceTime=
+#WallMessages=yes
