--- a/system/etc/systemd/user.conf
+++ b/system/etc/systemd/user.conf
@@ -24,7 +24,7 @@ LogLocation=yes
 LogTime=yes
 #SystemCallArchitectures=
 #TimerSlackNSec=
-#StatusUnitFormat=description
+StatusUnitFormat=description
 #DefaultTimerAccuracySec=1min
 #DefaultStandardOutput=inherit
 #DefaultStandardError=inherit
@@ -55,5 +55,6 @@ LogTime=yes
 #DefaultMemoryPressureThresholdSec=200ms
 #DefaultMemoryPressureWatch=auto
 #DefaultSmackProcessLabel=
+#DefaultRestrictSUIDSGID=
 #ReloadLimitIntervalSec=
 #ReloadLimitBurst
