--- a/system/etc/systemd/system.conf
+++ b/system/etc/systemd/system.conf
@@ -24,8 +24,8 @@ LogLocation=yes
 LogTime=yes
 DumpCore=yes
 ShowStatus=yes
-CrashChangeVT=yes
-CrashShell=yes
+#CrashChangeVT=no
+#CrashShell=no
 #CrashAction=freeze
 #CtrlAltDelBurstAction=reboot-force
 #CPUAffinity=
@@ -54,12 +54,11 @@ CrashShell=yes
 #DefaultStartLimitIntervalSec=10s
 #DefaultStartLimitBurst=5
 #DefaultEnvironment=
-DefaultCPUAccounting=yes
 DefaultIOAccounting=yes
 DefaultIPAccounting=yes
 DefaultMemoryAccounting=yes
 DefaultTasksAccounting=yes
-#DefaultTasksMax=15%
+DefaultTasksMax=100%
 #DefaultLimitCPU=
 #DefaultLimitFSIZE=
 #DefaultLimitDATA=
@@ -80,5 +79,6 @@ DefaultTasksAccounting=yes
 #DefaultMemoryPressureWatch=auto
 #DefaultOOMPolicy=stop
 #DefaultSmackProcessLabel=
+#DefaultRestrictSUIDSGID=
 #ReloadLimitIntervalSec=
 #ReloadLimitBurst=
