--- a/system/etc/systemd/timesyncd.conf
+++ b/system/etc/systemd/timesyncd.conf
@@ -17,10 +17,8 @@
 # See timesyncd.conf(5) for details.
 
 [Time]
-NTP=time.cloudflare.com
-FallbackNTP=time.cloudflare.com
 #NTP=
-#FallbackNTP=0.debian.pool.ntp.org 1.debian.pool.ntp.org 2.debian.pool.ntp.org 3.debian.pool.ntp.org
+#FallbackNTP=0.arch.pool.ntp.org 1.arch.pool.ntp.org 2.arch.pool.ntp.org 3.arch.pool.ntp.org
 #RootDistanceMaxSec=5
 #PollIntervalMinSec=32
 #PollIntervalMaxSec=2048
