hell yeah, thats worth it

--- a/system/etc/sysctl/99-sysctl.conf
+++ b/system/etc/sysctl/99-sysctl.conf
@@ -1,24 +1,60 @@
-vm.dirty_ratio = 10
-vm.dirty_background_ratio = 10
+# Kernel
+kernel.acct = 5 1 10
+kernel.msgmax = 16384
+kernel.msgmnb = 32768
+kernel.msgmni = 64000
+kernel.sched_rt_runtime_us = -1
+kernel.dmesg_restrict = 1
+kernel.kexec_load_disabled = 1
+kernel.kptr_restrict = 2
+kernel.printk = 3 3 3 3
+kernel.sysrq = 0
+
+# Memory
+vm.mmap_rnd_bits = 32
+vm.mmap_rnd_compat_bits = 16
+vm.dirty_ratio = 5
+vm.dirty_background_ratio = 2
 vm.vfs_cache_pressure = 25
-net.core.default_qdisc = cake
-net.ipv4.tcp_congestion_control = bbr
-vm.page-cluster = 4
+vm.page-cluster = 0
 vm.watermark_boost_factor = 0
-vm.watermark_scale_factor = 125
-vm.swappiness = 200
-vm.max_map_count = 2147483647
-net.core.netdev_max_backlog = 32768
-net.core.somaxconn = 16384
-net.core.rmem_default = 1048576
-net.core.rmem_max = 16777216
-net.core.wmem_default = 1048576
+vm.watermark_scale_factor = 150
+vm.swappiness = 10
+vm.max_map_count = 2147483642
+vm.workingset_protection = 1
+vm.compact_memory = 1
+vm.compaction_proactiveness = 10
+vm.compact_unevictable_allowed = 0
+vm.defrag_mode = 1
+vm.hugetlb_optimize_vmemmap = 1
+
+# Filesystem
+fs.dentry-negative = 1
+fs.protected_fifos = 2
+fs.protected_hardlinks = 1
+fs.protected_regular = 2
+fs.protected_symlinks = 1
+
+# Network
+net.core.default_qdisc = cake
 net.core.wmem_max = 16777216
 net.core.optmem_max = 65536
-net.ipv4.tcp_rmem = 4096 1048576 2097152
-net.ipv4.tcp_wmem = 4096 65536 16777216
-net.ipv4.udp_rmem_min = 16384
-net.ipv4.udp_wmem_min = 16384
+net.core.netdev_max_backlog = 32768
+net.core.somaxconn = 16384
+net.core.rmem_default = 16777216 
+net.core.rmem_max = 1677721
+net.core.wmem_default = 16777216
+net.core.wmem_max = 16777216
+net.core.bpf_jit_enable = 1
+net.core.bpf_jit_harden = 2
+
+## IPv4
+net.ipv4.tcp_rmem = 756243 2097152 16777216
+net.ipv4.tcp_wmem = 756243 2097152 16777216
+net.ipv4.udp_rmem = 756243 2097152 16777216
+net.ipv4.udp_wmem = 756243 2097152 16777216
+net.ipv4.udp_rmem_min = 756243
+net.ipv4.udp_wmem_min = 756243
 net.ipv4.tcp_fastopen = 3
 net.ipv4.tcp_max_syn_backlog = 32768
 net.ipv4.tcp_max_tw_buckets = 2000000
@@ -29,27 +65,17 @@ net.ipv4.tcp_keepalive_intvl = 10
 net.ipv4.tcp_keepalive_probes = 6
 net.ipv4.tcp_mtu_probing = 1
 net.ipv4.ip_local_port_range = 30000 65535
-dev.tty.ldisc_autoload = 0
-fs.protected_fifos = 2
-fs.protected_hardlinks = 1
-fs.protected_regular = 2
-fs.protected_symlinks = 1
-kernel.dmesg_restrict = 1
-kernel.kexec_load_disabled = 1
-kernel.kptr_restrict = 2
-kernel.printk = 3 3 3 3
-kernel.sysrq = 0
-net.core.bpf_jit_enable = 1
-net.core.bpf_jit_harden = 2
 net.ipv4.tcp_dsack = 1
 net.ipv4.tcp_fack = 1
 net.ipv4.tcp_rfc1337 = 1
 net.ipv4.tcp_sack = 1
+net.ipv4.tcp_early_retrans = 4 
+net.ipv4.tcp_ecn = 1
 net.ipv4.tcp_syncookies = 1
 net.ipv4.tcp_timestamps = 1
-vm.mmap_rnd_bits = 32
-vm.mmap_rnd_compat_bits = 16
+net.ipv4.tcp_congestion_control = bbr
 
+# CachyOS patch
 # BORE Related, might not be compatible with most kernels though therefore prefixed with -
 kernel.sched_bore = 1
 kernel.sched_burst_fork_atavistic = 3
@@ -57,6 +83,5 @@ kernel.sched_burst_smoothness_long = 1
 kernel.sched_burst_smoothness_short = 1
 kernel.sched_burst_exclude_kthreads = 0
 
-# CachyOS patch
-vm.workingset_protection = 1
-kernel.sched_rt_runtime_us = -1
+# HARDENING, didn't know where to put.
+dev.tty.ldisc_autoload = 0
