--- a/system/etc/sysctl/99-sysctl.conf
+++ b/system/etc/sysctl/99-sysctl.conf
@@ -354,29 +354,74 @@ net.ipv4.conf.default.forwarding = 0
 # ------------------------------------------------------------------------------
 # NETWORK: IPv6 Configuration
 # Reference: Documentation/networking/ip-sysctl.rst
+# Reference: RFC 4861 (Neighbor Discovery for IPv6)
 # ------------------------------------------------------------------------------
 
-# IPv6 buffer sizes (match IPv4)
+# IPv6 fragment reassembly buffers
 net.ipv6.ip6frag_high_thresh = 4194304      # 4MB fragment reassembly buffer
 net.ipv6.ip6frag_low_thresh = 3145728       # 3MB low threshold
 
-# IPv6 security (match IPv4 hardening)
-net.ipv6.conf.all.accept_ra = 0             # Don't accept router advertisements
-net.ipv6.conf.default.accept_ra = 0
-net.ipv6.conf.all.accept_redirects = 0      # Ignore ICMP redirects
+# IPv6 Router Advertisements (CRITICAL for systemd-resolved)
+# accept_ra values:
+#   0 = disabled (breaks SLAAC and RDNSS)
+#   1 = enabled if forwarding is disabled (correct for client)
+#   2 = always enabled (even if forwarding is on)
+net.ipv6.conf.all.accept_ra = 1             # Accept RA (required for DNS/SLAAC)
+net.ipv6.conf.default.accept_ra = 1         # Accept RA on new interfaces
+
+# IPv6 Router Advertisement components
+net.ipv6.conf.all.accept_ra_defrtr = 1      # Accept default router in RA
+net.ipv6.conf.default.accept_ra_defrtr = 1
+net.ipv6.conf.all.accept_ra_pinfo = 1       # Accept prefix info in RA (for SLAAC)
+net.ipv6.conf.default.accept_ra_pinfo = 1
+net.ipv6.conf.all.accept_ra_rtr_pref = 1    # Accept router preference in RA
+net.ipv6.conf.default.accept_ra_rtr_pref = 1
+
+# IPv6 Stateless Address Autoconfiguration (SLAAC)
+# Required for automatic IPv6 address assignment
+net.ipv6.conf.all.autoconf = 1              # Enable SLAAC
+net.ipv6.conf.default.autoconf = 1          # Enable SLAAC on new interfaces
+
+# IPv6 Security (safe to harden)
+net.ipv6.conf.all.accept_redirects = 0      # Ignore ICMP redirects (security)
 net.ipv6.conf.default.accept_redirects = 0
-net.ipv6.conf.all.accept_source_route = 0   # No source routing
+net.ipv6.conf.all.accept_source_route = 0   # No source routing (security)
 net.ipv6.conf.default.accept_source_route = 0
+
+# IPv6 Forwarding (disable - we're not a router)
 net.ipv6.conf.all.forwarding = 0            # Not a router
 net.ipv6.conf.default.forwarding = 0
 
-# IPv6 autoconfig (disable if not using SLAAC)
-net.ipv6.conf.all.autoconf = 0
-net.ipv6.conf.default.autoconf = 0
-
 # IPv6 MTU
-net.ipv6.conf.all.mtu = 1500
+net.ipv6.conf.all.mtu = 1500                # Standard Ethernet MTU
 net.ipv6.conf.default.mtu = 1500
+
+# IPv6 temporary addresses (privacy extensions)
+# Reference: RFC 4941 (Privacy Extensions for SLAAC)
+# 0 = disabled, 1 = enabled but prefer public, 2 = enabled and prefer temporary
+net.ipv6.conf.all.use_tempaddr = 2          # Prefer temporary addresses (privacy)
+net.ipv6.conf.default.use_tempaddr = 2
+
+# IPv6 duplicate address detection (DAD)
+# Number of neighbor solicitations to send (1-3 typical)
+net.ipv6.conf.all.dad_transmits = 1         # Fast DAD (1 probe)
+net.ipv6.conf.default.dad_transmits = 1
+
+# IPv6 router solicitation
+net.ipv6.conf.all.router_solicitations = 3  # Send 3 RS messages
+net.ipv6.conf.default.router_solicitations = 3
+net.ipv6.conf.all.router_solicitation_delay = 1     # Delay 1s before first RS
+net.ipv6.conf.default.router_solicitation_delay = 1
+net.ipv6.conf.all.router_solicitation_interval = 4  # 4s between RS messages
+net.ipv6.conf.default.router_solicitation_interval = 4
+
+# IPv6 neighbor reachability
+net.ipv6.neigh.default.gc_thresh1 = 128     # Min entries before GC
+net.ipv6.neigh.default.gc_thresh2 = 512     # Threshold for aggressive GC
+net.ipv6.neigh.default.gc_thresh3 = 1024    # Max entries (hard limit)
+
+# IPv6 route table
+net.ipv6.route.max_size = 16384             # Max IPv6 routes (reasonable for client)
 
 # ------------------------------------------------------------------------------
 # DEVICE SECURITY
