--- a/system/etc/tlp.conf
+++ b/system/etc/tlp.conf
@@ -63,13 +63,13 @@ TLP_ENABLE=1
 # Concerns some desktop and embedded hardware only.
 # Default: <none>
 
-#TLP_DEFAULT_MODE=AC
+TLP_DEFAULT_MODE=AC
 
 # Operation mode select: 0=depend on power source, 1=always use TLP_DEFAULT_MODE
 # Note: use in conjunction with TLP_DEFAULT_MODE=BAT for BAT settings on AC.
 # Default: 0
 
-#TLP_PERSISTENT_DEFAULT=0
+TLP_PERSISTENT_DEFAULT=1
 
 # Power supply classes to ignore when determining operation mode: AC, USB, BAT.
 # Separate multiple classes with spaces.
@@ -83,13 +83,13 @@ TLP_ENABLE=1
 # Default: 0 (AC), 2 (BAT)
 
 DISK_IDLE_SECS_ON_AC=0
-DISK_IDLE_SECS_ON_BAT=2
+DISK_IDLE_SECS_ON_BAT=0
 
 # Dirty page values (timeouts in secs).
 # Default: 15 (AC), 60 (BAT)
 
-MAX_LOST_WORK_SECS_ON_AC=0
-MAX_LOST_WORK_SECS_ON_BAT=0
+#MAX_LOST_WORK_SECS_ON_AC=15
+#MAX_LOST_WORK_SECS_ON_BAT=60
 
 # Select a CPU scaling driver operation mode.
 # Intel CPU with intel_pstate driver:
@@ -128,10 +128,10 @@ CPU_SCALING_GOVERNOR_ON_BAT=performance
 #   CPU_MIN/MAX_PERF_ON_AC/BAT below instead
 # Default: <none>
 
-CPU_SCALING_MIN_FREQ_ON_AC=4384000
-CPU_SCALING_MAX_FREQ_ON_AC=4384000
-CPU_SCALING_MIN_FREQ_ON_BAT=4384000
-CPU_SCALING_MAX_FREQ_ON_BAT=4384000
+CPU_SCALING_MIN_FREQ_ON_AC=4762528
+CPU_SCALING_MAX_FREQ_ON_AC=4762528
+CPU_SCALING_MIN_FREQ_ON_BAT=4762528
+CPU_SCALING_MAX_FREQ_ON_BAT=4762528
 
 # Set CPU energy/performance policies EPP and EPB:
 #   performance, balance_performance, default, balance_power, power.
@@ -146,8 +146,8 @@ CPU_SCALING_MAX_FREQ_ON_BAT=4384000
 #   EPP: amd-pstate driver in active mode ('amd-pstate-epp') as of kernel 6.3
 # Default: balance_performance (AC), balance_power (BAT)
 
-CPU_ENERGY_PERF_POLICY_ON_AC=performance
-CPU_ENERGY_PERF_POLICY_ON_BAT=performance
+#CPU_ENERGY_PERF_POLICY_ON_AC=balance_performance
+#CPU_ENERGY_PERF_POLICY_ON_BAT=balance_power
 
 # Set Intel CPU P-state performance: 0..100 (%).
 # Limit the max/min P-state to control the power dissipation of the CPU.
@@ -167,8 +167,8 @@ CPU_ENERGY_PERF_POLICY_ON_BAT=performance
 # Note: a value of 1 does *not* activate boosting, it just allows it.
 # Default: <none>
 
-CPU_BOOST_ON_AC=1
-CPU_BOOST_ON_BAT=1
+#CPU_BOOST_ON_AC=1
+#CPU_BOOST_ON_BAT=0
 
 # Set CPU dynamic boost feature:
 #   0=disable, 1=enable.
@@ -185,7 +185,7 @@ CPU_BOOST_ON_BAT=1
 #   0=disable (default, saves power), 1=enable (for kernel debugging only).
 # Default: 0
 
-NMI_WATCHDOG=1
+#NMI_WATCHDOG=0
 
 # Select platform profile:
 #   performance, balanced, low-power.
@@ -216,7 +216,7 @@ PLATFORM_PROFILE_ON_BAT=performance
 # Devices can be specified by disk ID also (lookup with: tlp diskid).
 # Default: "nvme0n1 sda"
 
-DISK_DEVICES="nvme0n1 sda"
+DISK_DEVICES="sda sdb"
 
 # Disk advanced power management level: 1..254, 255 (max saving, min, off).
 # Levels 1..127 may spin down the disk; 255 allowable on most drives.
@@ -264,7 +264,7 @@ DISK_SPINDOWN_TIMEOUT_ON_BAT="0 0"
 #   the old block layer in kernel 5.0
 # Default: keep
 
-DISK_IOSCHED="kyber kyber"
+DISK_IOSCHED="adios adios"
 
 # AHCI link power management (ALPM) for SATA disks:
 #   min_power, med_power_with_dipm(*), medium_power, max_performance.
@@ -291,14 +291,14 @@ SATA_LINKPWR_ON_BAT="max_performance"
 
 # Default: on (AC), auto (BAT)
 
-AHCI_RUNTIME_PM_ON_AC=auto
-AHCI_RUNTIME_PM_ON_BAT=auto
+AHCI_RUNTIME_PM_ON_AC=on
+AHCI_RUNTIME_PM_ON_BAT=on
 
 # Seconds of inactivity before disk is suspended.
 # Note: effective only when AHCI_RUNTIME_PM_ON_AC/BAT is activated.
 # Default: 15
 
-#AHCI_RUNTIME_PM_TIMEOUT=15
+AHCI_RUNTIME_PM_TIMEOUT=0
 
 # Power off optical drive in UltraBay/MediaBay: 0=disable, 1=enable.
 # Drive can be powered on again by releasing (and reinserting) the eject lever
@@ -355,8 +355,8 @@ AMDGPU_ABM_LEVEL_ON_BAT=0
 # Wi-Fi power saving mode: on=enable, off=disable.
 # Default: off (AC), on (BAT)
 
-WIFI_PWR_ON_AC=off
-WIFI_PWR_ON_BAT=off
+#WIFI_PWR_ON_AC=off
+#WIFI_PWR_ON_BAT=on
 
 # Disable Wake-on-LAN: Y/N.
 # Default: Y
@@ -389,8 +389,8 @@ PCIE_ASPM_ON_BAT=performance
 # Runtime Power Management for PCIe bus devices: on=disable, auto=enable.
 # Default: on (AC), auto (BAT)
 
-RUNTIME_PM_ON_AC=auto
-RUNTIME_PM_ON_BAT=auto
+RUNTIME_PM_ON_AC=on
+RUNTIME_PM_ON_BAT=on
 
 # Exclude listed PCIe device adresses from Runtime PM.
 # Note: this preserves the kernel driver default, to force a certain state
@@ -485,12 +485,12 @@ USB_AUTOSUSPEND=0
 # Separate multiple devices with spaces.
 # Default: <none>
 
-DEVICES_TO_ENABLE_ON_STARTUP="wifi bluetooth"
+#DEVICES_TO_ENABLE_ON_STARTUP="wifi"
 
 # Radio devices to enable on AC: bluetooth, nfc, wifi, wwan.
 # Default: <none>
 
-DEVICES_TO_ENABLE_ON_AC="bluetooth wifi"
+#DEVICES_TO_ENABLE_ON_AC="bluetooth nfc wifi wwan"
 
 # Radio devices to disable on battery: bluetooth, nfc, wifi, wwan.
 # Default: <none>
@@ -527,9 +527,9 @@ DEVICES_TO_ENABLE_ON_AC="bluetooth wifi"
 # Default: <none>
 
 # Battery charge level below which charging will begin.
-START_CHARGE_THRESH_BAT0=0
+#START_CHARGE_THRESH_BAT0=75
 # Battery charge level above which charging will stop.
-STOP_CHARGE_THRESH_BAT0=0
+#STOP_CHARGE_THRESH_BAT0=80
 
 # BAT1: Secondary battery (primary on some laptops)
 # Default: <none>
